# Centaur

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  vcpkg.json
Centaur/: CMakeLists.txt
Centaur/include/: CentaurApp.hpp  ConfigurationInterface.hpp  DAL.hpp  Globals.hpp  LogDialog.hpp  Logger.hpp  LoginDialog.hpp  SettingsDialog.hpp  SettingsDialogData.hpp  crc64.hpp
Centaur/qrc/: resource.qrc
Centaur/src/: AddUserDialog.cpp  CandleChartDialog.cpp  CandleViewWidget.cpp  CentaurApp.cpp  ConfigurationInterface.cpp  DAL.cpp  DepthChartDialog.cpp  FavoritesDialog.cpp  Globals.cpp  LogDialog.cpp  Logger.cpp  LoginDialog.cpp  OrderbookDialog.cpp  PixmapMemCacheDialog.cpp  Plugins.cpp  QRCodeDialog.cpp  SettingsAdvancedPage.cpp  SettingsDialog.cpp  SettingsPluginsPage.cpp  SettingsSessionPage.cpp  SettingsShortcutsPage.cpp  ShortcutDialog.cpp  SplashDialog.cpp  TOTP.cpp  WatchlistWidget.cpp  main.cpp
Centaur/ui/: AddUserDialog.ui  CandleChartDialog.ui  CentaurApp.ui  DepthChartDialog.ui  LogDialog.ui  LoginDialog.ui  OrderbookDialog.ui  PixmapMemCacheDialog.ui  QRCodeDialog.ui  SettingsDialog.ui  ShortcutDialog.ui  SplashDialog.ui
Plugins/BinanceSpot/: CMakeLists.txt
Plugins/BinanceSpot/include/: AssetDetailDialog.hpp  BinanceSPOT.hpp  FeesDialog.hpp  SettingsWidget.hpp
Plugins/BinanceSpot/src/: AssetDetailDialog.cpp  BinanceSPOT_IExchange.cpp  BinanceSPOT_IStatus.cpp  BinnaceSPOT_IBase.cpp  SettingsWidget.cpp  StatusDialog.cpp
Plugins/BinanceSpot/ui/: AssetDetailDialog.ui  SettingsWidget.ui  StatusDialog.ui
Plugins/ExchangeRate/: CMakeLists.txt
Plugins/ExchangeRate/include/: ExchangeRate.hpp  SettingsWidget.hpp
Plugins/ExchangeRate/res/: resources.qrc
Plugins/ExchangeRate/src/: ExchangeRate.cpp  SettingsWidget.cpp
Plugins/ExchangeRate/ui/: SettingsWidget.ui
Plugins/include/: CentaurInterface.hpp  CentaurPlugin.hpp
Themes/: themes.md
Themes/MainTheme/: CMakeLists.txt
Themes/MainTheme/include/: CentTheme.hpp  ThemeParser.hpp  ThemePlugin.hpp
Themes/MainTheme/qrc/: resources.qrc
Themes/MainTheme/src/: CentTheme.cpp  ThemeParser.cpp  ThemePlugin.cpp
cmake/: core-naming.hpp.in
contributing/: guidelines.md
include/: Centaur.hpp  CentaurPlugin.hpp  ThemeInterface.hpp
local/: BinanceSPOT-85261bc6.cpk  CtTheme-2df95e88.cpk  ExchangeRate-f77ecf55.cpk  dark.theme.xml  theme.format.xml
scripts/: cttheme-copy.py  theme-plpack.py
tests/CandleWidgetTest/: TestDialog.cpp
tests/ThemeTests/: CMakeLists.txt  TestApplication.cpp  TestApplication.hpp  main.cpp  window.ui
tests/general/: CMakeLists.txt  tests.cpp  theme_parser.cpp
tests/general/theme/: brushes.xml  colors.xml  error-color-0.xml  error-color-1.xml  error-color-2.xml  error-color-3.xml  error-name-0.xml  error-name-1.xml  error-render-hint.xml  error-renders-types.xml  error-theme-node.xml  name-render.xml  pens.xml
tools/ctpath/: CMakeLists.txt  main.cpp
tools/plpack/: CMakeLists.txt  main.cpp  plpack-readme.md
